<resources>
    <string name="app_name">test_weather</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="main_top">Search by Zip Code</string>
    <string name="zip_code">Zip Code</string>
    <string name="get_weather">Get weather</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="sunrise">Time of Sunrise</string>
    <string name="sunset">Time of Sunset</string>
    <string name="clear">Clear</string>
    <string name="reduced">Reduced</string>
    <string name="fog">For</string>
    <string name="almost_zero">Almost zero</string>
    <string name="invalid">Invalid</string>
</resources>